data/derived/comb/progs/unify/prog1618.ml.out
Characters 8-10:
  let _ = pi / sqrt(2.0);;
          ^^
Error: This expression has type float but an expression was expected of type
         int
